# capdrop

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  package.json
.github/workflows/: build.yml
scripts/: build.sh
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
src-tauri/src/config/: mod.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/storage/: clipboard.rs  local.rs  markdown.rs  mod.rs
src/styles/: main.css
