[package]
name = "capdrop"
version = "0.1.0"
edition = "2021"
description = "CapDrop - Lightweight screenshot tool"

[lib]
name = "capdrop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
dirs = "5"
chrono = "0.4"



[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_Imaging",
    "Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }
